<resources>
    <item name="TAG_OBJECT_TYPE" type="id"/>
    <item name="TAG_OBJECT_TITLE" type="id"/>
    <item name="TAG_OBJECT_PATH" type="id"/>
    <item name="new_section_context" type="id"/>
    <item name="new_note_context" type="id"/>

    <string name="app_name">MicroPad</string>
    <string name="import_btn">Import Notepad</string>
    <string name="new_np_btn">NEW NOTEPAD</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="title_activity_viewer">µPad</string>
    <string name="markdown_hint">Content (in Markdown)</string>
    <string name="source_hint">Source Website</string>
    <string name="width_hint">Width</string>
    <string name="height_hint">Height</string>
    <string name="font_hint">Font Size</string>
    <string name="pickfile_hint">Browse Files...</string>
    <string name="pickimage_hint">Browse Images...</string>
    <string name="record_btn">Start Recording...</string>
    <string name="stop_rec_hint">Stop Recording</string>
    <string name="note_helper">Tap anywhere on the page to insert an element</string>
    <string name="sync">Sync</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="terms">By signing up you agree to the Terms and Conditions and the Privacy Policy at https://getmicropad.com/policy.php</string>
    <string name="logout">Logout</string>
    <string name="open_sync_manager">Open Sync Manager</string>
    <string name="buy_button">BUY</string>
</resources>
