<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:orientation="vertical">

            <Button
                android:text="@string/record_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/recording_button"
                android:layout_weight="1"/>

            <Button
                android:text="@string/stop_rec_hint"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/stop_recording_button"
                android:layout_weight="1"
                android:visibility="gone"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:ems="10"
                android:id="@+id/source_input"
                android:layout_weight="1"
                android:inputType="textWebEmailAddress"
                android:hint="@string/source_hint"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>